--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -7,7 +7,7 @@
 
 \section{Accumulation}\label{sec:accumulation}
 
-Accumulation may be defined as some function whose arguments are $\mathbf{W}$ and $\delta$ together with selected portions of (at times partially transitioned) state and which yields the posterior service state $\accountspostpreimage$ together with additional state elements $\iota'$, $\varphi'$ and $\chi'$.
+Accumulation may be defined as some function whose arguments are $\mathbf{W}$ and $\accounts$ together with selected portions of (at times partially transitioned) state and which yields the posterior service state $\accountspostpreimage$ together with additional state elements $\stagingset'$, $\varphi'$ and $\privileges'$.
 
 The proposition of accumulation is in fact quite simple: we merely wish to execute the \emph{Accumulate} logic of the service code of each of the services which has at least one work-digest, passing to it relevant data from said digests together with useful contextual information. However, there are three main complications. Firstly, we must define the execution environment of this logic and in particular the host functions available to it. Secondly, we must define the amount of gas to be allowed for each service's execution. Finally, we must determine the nature of transfers within Accumulate which, as we will see, leads to the need for a second entry-point, \emph{on-transfer}.
 
@@ -21,13 +21,13 @@ The proposition of accumulation is in fact quite simple: we merely wish to execu
 
 Accumulation of a work-package/work-report is deferred in the case that it has a not-yet-fulfilled dependency and is cancelled entirely in the case of an invalid dependency. Dependencies are specified as work-package hashes and in order to know which work-packages have been accumulated already, we maintain a history of what has been accumulated. This history, $\accumulated$, is sufficiently large for an epoch worth of work-reports. Formally:
 \begin{align}
-  \accumulated &\in \seq{\{\H\}}_\mathsf{E} \\
+  \accumulated &\in \seq{\{\hash\}}_\mathsf{E} \\
   \accumulatedcup &\equiv \bigcup_{x \in \accumulated}(x)
 \end{align}
 
 We also maintain knowledge of ready (\ie available and/or audited) but not-yet-accumulated work-reports in the state item $\ready$. Each of these were made available at most one epoch ago but have or had unfulfilled dependencies. Alongside the work-report itself, we retain its unaccumulated dependencies, a set of work-package hashes. Formally:
 \begin{align}
-  \ready &\in \seq{\seq{(\mathbb{W}, \{\H\})}}_\mathsf{E}
+  \ready &\in \seq{\seq{(\workreport, \{\hash\})}}_\mathsf{E}
 \end{align}
 
 The newly available work-reports, $\mathbf{W}$, are partitioned into two sequences based on the condition of having zero prerequisite work-reports. Those meeting the condition, $\mathbf{W}^!$, are accumulated immediately. Those not, $\mathbf{W}^Q$, are for queued execution. Formally:
@@ -44,13 +44,13 @@ The newly available work-reports, $\mathbf{W}$, are partitioned into two sequenc
 We define the queue-editing function $E$, which is essentially a mutator function for items such as those of $\ready$, parameterized by sets of now-accumulated work-package hashes (those in $\accumulated$). It is used to update queues of work-reports when some of them are accumulated. Functionally, it removes all entries whose work-report's hash is in the set provided as a parameter, and removes any dependencies which appear in said set. Formally:
 \begin{equation}
   E\colon\left\{\begin{aligned}
-      &(\seq{(\mathbb{W}, \{\H\})}, \{\H\}) \to \seq{(\mathbb{W}, \{\H\})} \\
+      &(\seq{(\workreport, \{\hash\})}, \{\hash\}) \to \seq{(\workreport, \{\hash\})} \\
     &(\mathbf{r}, \mathbf{x}) \mapsto \left[
       (w, \mathbf{d} \setminus \mathbf{x})
       \,\middle\vert\,
       \left\{\,\begin{aligned}
         &(w, \mathbf{d}) \orderedin \mathbf{r} ,\\
-        &(w_s)_h \not\in \mathbf{x}
+        &(w_\wr¬avspec)_\as¬packagehash \not\in \mathbf{x}
       \end{aligned}\right.
       \right]
   \end{aligned}\right.
@@ -59,7 +59,7 @@ We define the queue-editing function $E$, which is essentially a mutator functio
 We further define the accumulation priority queue function $Q$, which provides the sequence of work-reports which are accumulatable given a set of not-yet-accumulated work-reports and their dependencies.
 \begin{equation}
   Q\colon\left\{\begin{aligned}
-    &\seq{(\mathbb{W}, \{\H\})} \to \seq{\mathbb{W}} \\
+    &\seq{(\workreport, \{\hash\})} \to \seq{\workreport} \\
     &\mathbf{r} \mapsto \begin{cases}
       [] &\when \mathbf{g} = [] \\
       \mathbf{g} \frown Q(E(\mathbf{r}, \srmap(\mathbf{g})))\!\!\!\! &\otherwise \\
@@ -71,14 +71,14 @@ We further define the accumulation priority queue function $Q$, which provides t
 Finally, we define the mapping function $\srmap$ which extracts the corresponding work-package hashes from a set of work-reports:
 \begin{equation}
   \srmap\colon\left\{\begin{aligned}
-    \{\mathbb{W}\} &\to \{\H\}\\
-    \mathbf{w} &\mapsto \{ (w_s)_h \mid w \in \mathbf{w} \}
+    \{\workreport\} &\to \{\hash\}\\
+    \mathbf{w} &\mapsto \{ (w_\wr¬avspec)_\as¬packagehash \mid w \in \mathbf{w} \}
   \end{aligned}\right.
 \end{equation}
 
 We may now define the sequence of accumulatable work-reports in this block as $\mathbf{W}^*$:
 \begin{align}
-  \using m &= \mathbf{H}_t \bmod \mathsf{E}\\
+  \using m &= \H_\¬timeslot \bmod \mathsf{E}\\
   \mathbf{W}^* &\equiv \mathbf{W}^! \frown Q(\mathbf{q}) \\
   \quad\where \mathbf{q} &= E(\wideparen{\ready_{m\dots}} \concat \wideparen{\ready_{\dots m}} \concat \mathbf{W}^Q, \srmap(\mathbf{W}^!))
 \end{align}
@@ -95,17 +95,17 @@ We resolve this by defining a function $\Delta_+$ which accumulates work-reports
 
 Only once all such accumulation is executed do we integrate the results and thus define the relevant posterior state items. In doing so we also integrate the consequences of any \emph{deferred-transfers} implied by accumulation.
 
-Our formalisms begin by defining $\partialstate$ as a characterization of (\ie values capable of representing) state components which are both needed and mutable by the accumulation process. This comprises the service accounts state (as in $\accountspre$), the upcoming validator keys $\iota$, the queue of authorizers $\varphi$ and the privileges state $\chi$. Formally:
+Our formalisms begin by defining $\partialstate$ as a characterization of (\ie values capable of representing) state components which are both needed and mutable by the accumulation process. This comprises the service accounts state (as in $\accountspre$), the upcoming validator keys $\stagingset$, the queue of authorizers $\varphi$ and the privileges state $\privileges$. Formally:
 \begin{equation}
   \label{eq:partialstate}
   \partialstate \equiv \left(\begin{aligned}
-    &\isa{\mathbf{d}}{\dict{\N_S}{\mathbb{A}}} \,,\;
-    \isa{\mathbf{i}}{\seq{\mathbb{K}}_\mathsf{V}} \,,\;
-    \isa{\mathbf{q}}{\seq{\seq{\H}_\mathsf{Q}}_\mathsf{C}} \,,\\
+    &\isa{\mathbf{d}}{\dict{\N_S}{\serviceaccount}} \,,\;
+    \isa{\mathbf{i}}{\seq{\valkey}_\valcount} \,,\;
+    \isa{\mathbf{q}}{\seq{\seq{\hash}_\mathsf{Q}}_\corecount} \,,\\
     &\isa{m}{\N_S} \,,\;
-    \isa{\mathbf{a}}{\seq{\N_S}_\mathsf{C}} \,,\;
+    \isa{\mathbf{a}}{\seq{\N_S}_\corecount} \,,\;
     \isa{v}{\N_S} \,,\;
-    \isa{\mathbf{z}}{\dict{\N_S}{\N_G}}
+    \isa{\mathbf{z}}{\dict{\N_S}{\gas}}
   \end{aligned}\right)
 \end{equation}
 
@@ -114,28 +114,28 @@ We denote the set characterizing a \emph{deferred transfer} as $\defxfer$, notin
   \defxfer \equiv \tuple{
     \isa{s}{\N_S} ,
     \isa{d}{\N_S} ,
-    \isa{a}{\N_B} ,
-    \isa{m}{\Y_{\mathsf{W}_T}} ,
-    \isa{g}{\N_G}
+    \isa{a}{\balance} ,
+    \isa{m}{\blob_{\mathsf{W}_T}} ,
+    \isa{g}{\gas}
   }
 \end{align}
 
 Finally, we denote the set of service/hash pairs, utilized as a service-indexed commitment to the accumulation output, as $\servouts$:
 \begin{equation}
-  \servouts \equiv \{(\N_S, \H)\} \qquad \gasused \equiv \seq{\tup{\N_S, \N_G}}
+  \servouts \equiv \{(\N_S, \hash)\} \qquad \gasused \equiv \seq{\tup{\N_S, \gas}}
 \end{equation}
 
 We define the outer accumulation function $\Delta_+$ which transforms a gas-limit, a sequence of work-reports, an initial partial-state and a dictionary of services enjoying free accumulation, into a tuple of the number of work-results accumulated, a posterior state-context, the resultant deferred-transfers and accumulation-output pairings:
 \begin{equation}
   \Delta_+\colon\left\{\begin{aligned}
-    &(\N_G, \seq{\mathbb{W}}, \partialstate, \dict{\N_S}{\N_G}) \to (\N, \partialstate, \defxfers, \servouts, \gasused) \\
+    &(\gas, \seq{\workreport}, \partialstate, \dict{\N_S}{\gas}) \to (\N, \partialstate, \defxfers, \servouts, \gasused) \\
     &(g, \mathbf{w}, \mathbf{o}, \mathbf{f}) \!\mapsto\! \begin{cases}
       (0, \mathbf{o}, [], \{\}, []) &
         \when i = 0 \\
       (i + j, \mathbf{o}', \mathbf{t}^* \!\!\concat \mathbf{t}, \mathbf{b}^* \!\cup \mathbf{b}, \mathbf{u}^* \!\!\concat \mathbf{u})\!\!\!\! &
         \text{o/w}\!\!\!\!\!\!\!\! \\
     \end{cases} \\
-    &\quad\where i = \max(\N_{|\mathbf{w}| + 1}): \sum_{w \in \mathbf{w}_{\dots i}}\sum_{r \in w_\mathbf{r}}(r_g) \le g \\
+    &\quad\where i = \max(\N_{\len{\mathbf{w}} + 1}): \sum_{w \in \mathbf{w}_{\dots i}}\sum_{r \in w_\mathbf{r}}(r_g) \le g \\
     &\quad\also (\mathbf{o}^*, \mathbf{t}^*, \mathbf{b}^*, \mathbf{u}^*) = \Delta_*(\mathbf{o}, \mathbf{w}_{\dots i}, \mathbf{f}) \\
     &\quad\also (j, \mathbf{o}', \mathbf{t}, \mathbf{b}, \mathbf{u}) = \Delta_+(g - \!\!\!\!\sum_{(s, u) \in \mathbf{u}^*}\!\!\!\!u, \mathbf{w}_{i\dots}, \mathbf{o}^*, \{\})
   \end{aligned}\right.
@@ -144,7 +144,7 @@ We define the outer accumulation function $\Delta_+$ which transforms a gas-limi
 We come to define the parallelized accumulation function $\Delta_*$ which, with the help of the single-service accumulation function $\Delta_1$, transforms an initial state-context, together with a sequence of work-reports and a dictionary of privileged always-accumulate services, into a tuple of the total gas utilized in \textsc{pvm} execution $u$, a posterior state-context $(\mathbf{d}', \mathbf{i}', \mathbf{q}', m', \mathbf{a}', v', \mathbf{x}')$ and the resultant accumulation-output pairings $\mathbf{b}$ and deferred-transfers $\wideparen{\mathbf{t}}$:
 \begin{equation}
   \Delta_*\colon\left\{\;\begin{aligned}
-    &(\partialstate, \seq{\mathbb{W}}, \dict{\N_S}{\N_G}) \to (\partialstate, \defxfers, \servouts, \gasused) \\
+    &(\partialstate, \seq{\workreport}, \dict{\N_S}{\gas}) \to (\partialstate, \defxfers, \servouts, \gasused) \\
     &(\mathbf{o}, \mathbf{w}, \mathbf{f}) \mapsto ((\mathbf{d}', \mathbf{i}', \mathbf{q}', m', \mathbf{a}', v', \mathbf{z}'), \wideparen{\mathbf{t}}, \mathbf{b}, \mathbf{u})\!\!\!\!\!\!\\
     &\text{where:}\\
     &\ \begin{aligned}
@@ -155,10 +155,10 @@ We come to define the parallelized accumulation function $\Delta_*$ which, with 
       \mathbf{d}' &= \fnprovide((\mathbf{d} \cup \mathbf{n}) \setminus \mathbf{m}, \bigcup_{s \in \mathbf{s}} \Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_\mathbf{p}) \\
       &(\mathbf{d}, \mathbf{i}, \mathbf{q}, m, \mathbf{z}) = \mathbf{o} \\
       (m', \mathbf{a}^*, v^*, \mathbf{z}') &= (\Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, m)_\mathbf{o})_{(m, \mathbf{a}, v, \mathbf{z})} \\
-      \forall c \in \N_\mathsf{C} : \mathbf{a}'_c &= ((\Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, \mathbf{a}^*_c)_\mathbf{o})_\mathbf{a})_c \\
+      \forall c \in \coreindex : \mathbf{a}'_c &= ((\Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, \mathbf{a}^*_c)_\mathbf{o})_\mathbf{a})_c \\
       v' &= (\Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, v^*)_\mathbf{o})_v \\
       \mathbf{i}' &= (\Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, v)_\mathbf{o})_\mathbf{i} \\
-      \forall c \in \N_\mathsf{C} : \mathbf{q}'_c &= (\Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, \mathbf{a}_c)_\mathbf{o})_\mathbf{q} \\
+      \forall c \in \coreindex : \mathbf{q}'_c &= (\Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, \mathbf{a}_c)_\mathbf{o})_\mathbf{q} \\
       \mathbf{n} &= \bigcup_{s \in \mathbf{s}}(\{ (\Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_\mathbf{o})_\mathbf{d} \setminus \keys{\mathbf{d} \setminus \{s\}} \}) \\
       \mathbf{m} &= \bigcup_{s \in \mathbf{s}}(\keys{\mathbf{d}} \setminus \keys{(\Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_\mathbf{o})_\mathbf{d}})
     \end{aligned}
@@ -168,21 +168,21 @@ We come to define the parallelized accumulation function $\Delta_*$ which, with 
 And $\fnprovide$ is the preimage integration function, which transforms a dictionary of service states and a set of service/hash pairs into a new dictionary of service states. Preimage provisions into services which no longer exist or whose relevant request is dropped are disregarded:
 \begin{equation}
   \fnprovide\colon\left\{\begin{aligned}
-    &(\dict{\N_S}{\mathbb{A}}, \{\tup{\N_S, \Y}\}) \to \dict{\N_S}{\mathbb{A}} \\
+    &(\dict{\N_S}{\serviceaccount}, \{\tup{\N_S, \blob}\}) \to \dict{\N_S}{\serviceaccount} \\
     &(\mathbf{d}, \mathbf{p}) \mapsto \mathbf{d}'\;\where \mathbf{d}' = \mathbf{d}\;\text{except:} \\
     &\quad\forall \tup{s, \mathbf{i}} \in \mathbf{p},\;
       s \in \keys{\mathbf{d}},\;
-      \mathbf{d}[s]_\mathbf{l}[\hash(\mathbf{i}), |\mathbf{i}|] = \sq{}:\\
-    &\qquad \mathbf{d}'[s]_\mathbf{l}[\hash(\mathbf{i}), |\mathbf{i}|] = [\tau']\\
-    &\qquad \mathbf{d}'[s]_\mathbf{p}[\hash(\mathbf{i})] = \mathbf{i}
+      \mathbf{d}[s]_\mathbf{l}[\blake(\mathbf{i}), \len{\mathbf{i}}] = \sq{}:\\
+    &\qquad \mathbf{d}'[s]_\mathbf{l}[\blake(\mathbf{i}), \len{\mathbf{i}}] = [\thetime']\\
+    &\qquad \mathbf{d}'[s]_\mathbf{p}[\blake(\mathbf{i})] = \mathbf{i}
     %\begin{aligned}
     %  \tup{s, \mathbf{i}} \in \mathbf{p} \wedge
     %  s \in \keys{\mathbf{d}}\;\wedge& \\
-    %  \mathbf{d}[s]_\mathbf{l}[\hash(\mathbf{i}), |\mathbf{i}|] = \sq{}&
+    %  \mathbf{d}[s]_\mathbf{l}[\blake(\mathbf{i}), \len{\mathbf{i}}] = \sq{}&
     %\end{aligned} &\Rightarrow
     %\begin{aligned}
-    %  &\mathbf{d}'[s]_\mathbf{l}[\hash(\mathbf{i}), |\mathbf{i}|] = \tau' \wedge \\
-    %  &\mathbf{d}'[s]_\mathbf{p}[\hash{\mathbf{i}}] = \mathbf{i}
+    %  &\mathbf{d}'[s]_\mathbf{l}[\blake(\mathbf{i}), \len{\mathbf{i}}] = \thetime' \wedge \\
+    %  &\mathbf{d}'[s]_\mathbf{p}[\blake{\mathbf{i}}] = \mathbf{i}
     %\end{aligned} \\
   \end{aligned}\right.
 \end{equation}
@@ -192,36 +192,36 @@ We note that while forming the union of all altered, newly added service and new
 The single-service accumulation function, $\Delta_1$, transforms an initial state-context, sequence of work-reports and a service index into an alterations state-context, a sequence of \emph{transfers}, a possible accumulation-output and the actual \textsc{pvm} gas used. This function wrangles the work-items of a particular service from a set of work-reports and invokes \textsc{pvm} execution with said data:
 \begin{equation}
   \operandtuple \equiv \tuple{
-    \isa{\ot¬packagehash}{\H},
-    \isa{\ot¬segroot}{\H},
-    \isa{\ot¬authorizer}{\H},
-    \isa{\ot¬payloadhash}{\H},
-    \isa{\ot¬gaslimit}{\N_G},
-    \isa{\ot¬result}{\Y \cup \mathbb{J}},
-    \isa{\ot¬authtrace}{\Y}
+    \isa{\ot¬packagehash}{\hash},
+    \isa{\ot¬segroot}{\hash},
+    \isa{\ot¬authorizer}{\hash},
+    \isa{\ot¬payloadhash}{\hash},
+    \isa{\ot¬gaslimit}{\gas},
+    \isa{\ot¬result}{\blob \cup \mathbb{J}},
+    \isa{\ot¬authtrace}{\blob}
   }
 \end{equation}
 \begin{align}
     &\Delta_1 \colon \left\{\;\begin{aligned}
     &\begin{aligned}
       \tup{\begin{aligned}
-        &\partialstate, \seq{\mathbb{W}},\\
-        &\dict{\N_S}{\N_G}, \N_S
+        &\partialstate, \seq{\workreport},\\
+        &\dict{\N_S}{\gas}, \N_S
       \end{aligned}}
       &\to \tup{
         \begin{alignedat}{3}
           \isa{\mathbf{o}&}{\partialstate}\,,\;
           \isa{&\mathbf{t}&}{\defxfers}\,,\;
-          \isa{b}{\H\bm{?}}\,,\\
-          \isa{u&}{\N_G}\,,\;
-          \isa{&\mathbf{p}&}{\{\tup{\N_S, \Y}\}}
+          \isa{b}{\optional{\hash}}\,,\\
+          \isa{u&}{\gas}\,,\;
+          \isa{&\mathbf{p}&}{\{\tup{\N_S, \blob}\}}
         \end{alignedat}
       } \\
-      (\mathbf{o}, \mathbf{w}, \mathbf{f}, s) &\mapsto \Psi_A(\mathbf{o}, \tau', s, g, \mathbf{i})
+      (\mathbf{o}, \mathbf{w}, \mathbf{f}, s) &\mapsto \Psi_A(\mathbf{o}, \thetime', s, g, \mathbf{i})
     \end{aligned} \\
     &\text{where:} \\
     &\ \begin{aligned}
-      g &= \subifnone(\mathbf{f}_s, 0) + \!\!\!\!\sum_{w \in \mathbf{w}, \mathbf{r} \in w_\wr¬digests , \mathbf{r}_\wl¬service = s}\!\!\!\!(\mathbf{r}_g) \\
+      g &= \subifnone(\mathbf{f}\sub{s}, 0) + \!\!\!\!\sum_{w \in \mathbf{w}, \mathbf{r} \in w_\wr¬digests , \mathbf{r}_\wl¬service = s}\!\!\!\!(\mathbf{r}_\wr¬authgasused) \\
       \mathbf{i} &= \left[ \tup{\begin{alignedat}{3}
         % TODO: Rename \mathbf{o} to something else, to allow mathbf{a} to become \mathbf{o}.
         % TODO: Rename k to h. Then 5 of the 6 fields keep their names.
@@ -229,8 +229,8 @@ The single-service accumulation function, $\Delta_1$, transforms an initial stat
         \is{\ot¬gaslimit}{\mathbf{r}_\wl¬gaslimit},\,
         \is{\ot¬payloadhash}{\mathbf{r}_\wl¬payloadhash},\,
         \is{&\ot¬authtrace\;&}{w_\wr¬authtrace&},\\
-        \is{\ot¬segroot}{(w_\wr¬avspec)_e},\,
-        \is{\ot¬packagehash}{(w_\wr¬avspec)_h},\,
+        \is{\ot¬segroot}{(w_\wr¬avspec)_\as¬segroot},\,
+        \is{\ot¬packagehash}{(w_\wr¬avspec)_\as¬packagehash},\,
         \is{&\ot¬authorizer\;&}{w_\wr¬authorizer&}
       \end{alignedat}}
       \,\middle\vert\ 
@@ -249,20 +249,20 @@ This introduces $\operandtuple$, the set of wrangled \emph{operand tuples}, used
 
 \newcommand*{\accoutseq}{\mathbf{c}}
 
-Given the result of the top-level $\Delta_+$, we may define the posterior state $\chi'$, $\varphi'$ and $\iota'$ as well as the first intermediate state of the service-accounts $\accountspostacc$ and the Accumulation Output Log $\lastaccout'$:
+Given the result of the top-level $\Delta_+$, we may define the posterior state $\privileges'$, $\varphi'$ and $\stagingset'$ as well as the first intermediate state of the service-accounts $\accountspostacc$ and the Accumulation Output Log $\lastaccout'$:
 \begin{align}
-  \using &g = \max\left(\mathsf{G}_T, \mathsf{G}_A\cdot \mathsf{C} + \textstyle \sum_{x \in \mathcal{V}(\alwaysaccers)}(x)\right)\\
-  \also &\mathbf{o} = (\accountspre, \iota, \varphi, \manager, \assigners, \delegator, \alwaysaccers) \\
+  \using &g = \max\left(\mathsf{G}_T, \mathsf{G}_A\cdot \corecount + \textstyle \sum_{x \in \mathcal{V}(\alwaysaccers)}(x)\right)\\
+  \also &\mathbf{o} = (\accountspre, \stagingset, \varphi, \manager, \assigners, \delegator, \alwaysaccers) \\
   &(n, \mathbf{o}', \mathbf{t}, \lastaccout', \mathbf{u}) \equiv
     \Delta_+(g, \mathbf{W}^*, \mathbf{o}, \alwaysaccers) \\
-  &(\accountspostacc, \iota', \varphi', \manager', \assigners', \delegator', \alwaysaccers') \equiv \mathbf{o}'
+  &(\accountspostacc, \stagingset', \varphi', \manager', \assigners', \delegator', \alwaysaccers') \equiv \mathbf{o}'
 \end{align}
 
 From this formulation, we also receive $\mathbf{t}$, the grand sequence of deferred transfers, together with $n$, the total number of work-items accumulated and $\mathbf{u}$, the gas used in the accumulation process for each service. Each of these terms are used shortly.
 
 We compose $\mathbf{I}$, our accumulation statistics, which is a mapping from the service indices which were accumulated to the amount of gas used throughout accumulation and the number of work-items accumulated. Formally:
 \begin{align}
-  &\mathbf{I} \in \dict{\N_S}{\tuple{\N_G, \N}} \\
+  &\mathbf{I} \in \dict{\N_S}{\tuple{\gas, \N}} \\
   &\textstyle \mathbf{I} \equiv \left\{ s \mapsto \tup{\sum_{(s, u) \in \mathbf{u}}(u), \len{N(s)}} \;\middle\mid\; N(s) \ne [] \right\} \\
   \where &N(s) \equiv \sq{r \mid w \orderedin \mathbf{W}^*_{\dots n} , r \orderedin w_\mathbf{r} , r_s = s }
 \end{align}
@@ -279,10 +279,10 @@ We have denoted the sequence of implied transfers as $\mathbf{t}$, ordered inter
 
 The second intermediate state $\accountspostxfer$ may then be defined with all the deferred effects of the transfers applied followed by the last-accumulation record being updated for all accumulated services:
 \begin{align}
-  \mathbf{x} &= \{ s \mapsto \Psi_T(\accountspostacc, \tau', s, \selectxfers(s)) \mid (s \mapsto a) \in \accountspostacc \} \\
+  \mathbf{x} &= \{ s \mapsto \Psi_T(\accountspostacc, \thetime', s, \selectxfers(s)) \mid (s \mapsto a) \in \accountspostacc \} \\
   \accountspostxfer &\equiv \left\{ s \mapsto a' \;\middle\mid\; (s \mapsto \tup{a, u}) \in \mathbf{x} \right\} \\
   &\where a' = \begin{cases}
-    a \exc a'_a = \tau' &\when s \in \keys{\mathbf{I}} \\
+    a \exc a'_a = \thetime' &\when s \in \keys{\mathbf{I}} \\
     a &\otherwise
   \end{cases}
 \end{align}
@@ -290,7 +290,7 @@ The second intermediate state $\accountspostxfer$ may then be defined with all t
 Furthermore we build the deferred transfers statistics value $\mathbf{X}$ as the number of transfers and the total gas used in transfer processing for each \emph{destination} service index. Formally:
 \begin{align}
   \label{eq:deferredtransfers}
-  &\mathbf{X} \in \dict{\N_S}{\tuple{\N, \N_G}} \\
+  &\mathbf{X} \in \dict{\N_S}{\tuple{\N, \gas}} \\
   &\textstyle \mathbf{X} \equiv \left\{ d \mapsto \tup{\len{\selectxfers(d)}, u} \;\middle\vert\; \begin{aligned}
     \selectxfers(d) &\ne [],\\ \exists a: \mathbf{x}[d] &= (a, u)
   \end{aligned}
@@ -305,8 +305,8 @@ We define the final state of the ready queue and the accumulated map by integrat
   \forall i \in \N_\mathsf{E - 1}: \accumulated'_{i} &\equiv \accumulated_{i + 1} \\
   \forall i \in \N_\mathsf{E} : \ready'^\circlearrowleft_{m - i} &\equiv \begin{cases}
     E(\mathbf{W}^Q, \accumulated'_{\mathsf{E} - 1}) &\when i = 0 \\
-    [] &\when 1 \le i < \tau' - \tau \\
-    E(\ready^\circlearrowleft_{m - i}, \accumulated'_{\mathsf{E} - 1}) &\when i \ge \tau' - \tau
+    [] &\when 1 \le i < \thetime' - \thetime \\
+    E(\ready^\circlearrowleft_{m - i}, \accumulated'_{\mathsf{E} - 1}) &\when i \ge \thetime' - \thetime
   \end{cases}
 \end{align}
 
@@ -321,12 +321,12 @@ We define the final state of the ready queue and the accumulated map by integrat
 
 After accumulation, we must integrate all preimages provided in the lookup extrinsic to arrive at the posterior account state. The lookup extrinsic is a sequence of pairs of service indices and data. These pairs must be ordered and without duplicates (equation \ref{eq:preimagesareordered} requires this). The data must have been solicited by a service but not yet provided in the \emph{prior} state. Formally:
 \begin{align}
-  \xtpreimages &\in \lseq \ltuple\N_S\ts\Y\rtuple \rseq \\
+  \xtpreimages &\in \seq{\tuple{ \N_S,\, \blob }} \\
   \label{eq:preimagesareordered}\xtpreimages &= \orderuniqby{i}{i \in \xtpreimages} \\
   Y(\mathbf{d}, s, h, l) &\Leftrightarrow
   h \not\in \mathbf{d}[s]_\mathbf{p} \wedge
     \mathbf{d}[s]_\mathbf{l}[\tup{h, l}] = []\\
-  \forall \tup{s, \mathbf{p}} &\in \xtpreimages : Y(\accountspre, s, \hash(\mathbf{p}), |\mathbf{p}|)
+  \forall \tup{s, \mathbf{p}} &\in \xtpreimages : Y(\accountspre, s, \blake(\mathbf{p}), \len{\mathbf{p}})
 \end{align}
 
 We disregard, without prejudice, any preimages which due to the effects of accumulation are no longer useful. We define $\accountspostpreimage$ as the state after the integration of the still-relevant preimages:
@@ -334,10 +334,10 @@ We disregard, without prejudice, any preimages which due to the effects of accum
   \using \mathbf{P} = \{
     (s, \mathbf{p})
     \mid
-      \tup{s, \mathbf{p}} \in \xtpreimages, Y(\accountspostxfer, s, \hash(\mathbf{p}), |\mathbf{p}|)
+      \tup{s, \mathbf{p}} \in \xtpreimages, Y(\accountspostxfer, s, \blake(\mathbf{p}), \len{\mathbf{p}})
     \}\\
-  \accountspostpreimage = \accountspostxfer \text{ ex. } \forall \tup{s\ts\mathbf{p}} \in \mathbf{P} : \left\{\,\begin{aligned}
-      \quad\accountspostpreimage[s]_\mathbf{p}[\hash(\mathbf{p})] &= \mathbf{p} \\
-      \accountspostpreimage[s]_\mathbf{l}[\hash(\mathbf{p}), |\mathbf{p}|] &= [\tau']
+  \accountspostpreimage = \accountspostxfer \text{ ex. } \forall \tup{s,\,\mathbf{p}} \in \mathbf{P} : \left\{\,\begin{aligned}
+      \quad\accountspostpreimage[s]_\mathbf{p}[\blake(\mathbf{p})] &= \mathbf{p} \\
+      \accountspostpreimage[s]_\mathbf{l}[\blake(\mathbf{p}), \len{\mathbf{p}}] &= [\thetime']
     \end{aligned}\right.\!\!\!\!
 \end{align}
