--- a/text/merklization.tex
+++ b/text/merklization.tex
@@ -4,46 +4,46 @@ The Merklization process defines a cryptographic commitment from which arbitrary
 
 \subsection{Serialization}
 
-The serialization of state primarily involves placing all the various components of $\sigma$ into a single mapping from 31-octet sequence \emph{state-keys} to octet sequences of indefinite length. The state-key is constructed from a hash component and a chapter component, equivalent to either the index of a state component or, in the case of the inner dictionaries of $\delta$, a service index.
+The serialization of state primarily involves placing all the various components of $\thestate$ into a single mapping from 31-octet sequence \emph{state-keys} to octet sequences of indefinite length. The state-key is constructed from a hash component and a chapter component, equivalent to either the index of a state component or, in the case of the inner dictionaries of $\accounts$, a service index.
 
 We define the state-key constructor functions $C$ as:
 \begin{equation}
   C\colon\left\{\begin{aligned}
-    \N_{2^8} \cup (\N_{2^8}, \N_S) \cup \tup{\N_S, \Y} &\to \Y_{31} \\
+    \N_{2^8} \cup (\N_{2^8}, \N_S) \cup \tup{\N_S, \blob} &\to \blob_{31} \\
     i \in \N_{2^8} &\mapsto [i, 0, 0, \dots] \\
     (i, s \in \N_S) &\mapsto [i, n_0, 0, n_1, 0, n_2, 0, n_3, 0, 0, \dots]\ \where n = \se_4(s) \\
-    (s, h) &\mapsto [n_0, a_0, n_1, a_1, n_2, a_2, n_3, a_3, a_4, a_5, \dots, a_{26}]\ \where n = \se_4(s), a = \hash(h)_{0\dots 27}
+    (s, h) &\mapsto [n_0, a_0, n_1, a_1, n_2, a_2, n_3, a_3, a_4, a_5, \dots, a_{26}]\ \where n = \se_4(s), a = \blake(h)_{0\dots 27}
   \end{aligned}
   \right.
 \end{equation}
 
-The state serialization is then defined as the dictionary built from the amalgamation of each of the components. Cryptographic hashing ensures that there will be no duplicate state-keys given that there are no duplicate inputs to $C$. Formally, we define $T$ which transforms some state $\sigma$ into its serialized form:
+The state serialization is then defined as the dictionary built from the amalgamation of each of the components. Cryptographic hashing ensures that there will be no duplicate state-keys given that there are no duplicate inputs to $C$. Formally, we define $T$ which transforms some state $\thestate$ into its serialized form:
 \begin{equation}
-  T(\sigma) \equiv \left\{\begin{aligned}
-    &&C(1) &\mapsto \se([\var{x}\mid x\orderedin \alpha]) \;, \\
+  T(\thestate) \equiv \left\{\begin{aligned}
+    &&C(1) &\mapsto \se([\var{x}\mid x\orderedin \authpool]) \;, \\
     &&C(2) &\mapsto \se(\varphi) \;, \\
     &&C(3) &\mapsto \se(\var{[(h, b, s, \var{\mathbf{p}})\mid \tup{h, b, s, \mathbf{p}} \orderedin \recenthistory]}, \se_M(\beefybelt)) \;, \\
-    &&C(4) &\mapsto \se\left(\tup{\gamma_\mathbf{k}, \gamma_z, \left\{\,\begin{aligned}
-      0\ &\when \gamma_\mathbf{s} \in \seq{\mathbb{C}}_\mathsf{E}\\
-      1\ &\when \gamma_\mathbf{s} \in \seq{\H_B}_\mathsf{E}\\
-    \end{aligned}\right\}, \gamma_\mathbf{s},
-    \var{\gamma_\mathbf{a}}}\right) \;, \\
+    &&C(4) &\mapsto \se\left(\tup{\pendingset, \epochroot, \left\{\,\begin{aligned}
+      0\ &\when \sealtickets \in \seq{\mathbb{C}}_\mathsf{E}\\
+      1\ &\when \sealtickets \in \seq{\bskey}_\mathsf{E}\\
+    \end{aligned}\right\}, \sealtickets,
+    \var{\ticketaccumulator}}\right) \;, \\
     &&C(5) &\mapsto \se(\var{\orderby{x}{x \in \goodset}}, \var{\orderby{x}{x \in \badset}}, \var{\orderby{x}{x \in \wonkyset}}, \var{\orderby{x}{x \in \offenders}}) \;, \\
-    &&C(6) &\mapsto \se(\eta) \;, \\
-    &&C(7) &\mapsto \se(\iota) \;, \\
-    &&C(8) &\mapsto \se(\kappa) \;, \\
-    &&C(9) &\mapsto \se(\lambda) \;, \\
+    &&C(6) &\mapsto \se(\entropy) \;, \\
+    &&C(7) &\mapsto \se(\stagingset) \;, \\
+    &&C(8) &\mapsto \se(\activeset) \;, \\
+    &&C(9) &\mapsto \se(\previousset) \;, \\
     &&C(10) &\mapsto \se([\maybe{(w, \se_4(t))} \mid (w, t) \orderedin \rho]) \;, \\
-    &&C(11) &\mapsto \se_4(\tau) \;, \\
+    &&C(11) &\mapsto \se_4(\thetime) \;, \\
     &&C(12) &\mapsto \se_4(\manager, \assigners, \delegator) \concat \se(\alwaysaccers) \;, \\
     &&C(13) &\mapsto \se_4(\pi_V, \pi_L), \pi_C, \pi_S \;, \\
     &&C(14) &\mapsto \se([\var{(\mathbf{w}, \var{\mathbf{d}})} \mid (\mathbf{w}, \mathbf{d}) \orderedin \mathbf{i} \mid \mathbf{i} \orderedin \ready]) \;, \\
     &&C(15) &\mapsto \se([\var{\mathbf{i}} \mid \mathbf{i} \orderedin \accumulated]) \;, \\
     &&C(16) &\mapsto \se(\var{[(\se_4(s), \se(h)) \mid (s, h) \orderedin \lastaccout]}) \;, \\
-    \forall (s \mapsto \mathbf{a}) \in \delta: &&C(255, s) &\mapsto \mathbf{a}_c \concat \se_8(\mathbf{a}_b, \mathbf{a}_g, \mathbf{a}_m, \mathbf{a}_o, \mathbf{a}_f) \concat \se_4(\mathbf{a}_i, \mathbf{a}_r, \mathbf{a}_a, \mathbf{a}_p) \;, \\
-    \forall (s \mapsto \mathbf{a}) \in \delta, (\mathbf{k} \mapsto \mathbf{v}) \in \mathbf{a}_\mathbf{s}: &&C(s, \se_4(2^{32}-1) \frown \mathbf{k}) &\mapsto \mathbf{v} \;, \\
-    \forall (s \mapsto \mathbf{a}) \in \delta, (h \mapsto \mathbf{p}) \in \mathbf{a}_\mathbf{p}: &&C(s, \se_4(2^{32}-2) \frown h) &\mapsto \mathbf{p} \;, \\
-    \forall (s \mapsto \mathbf{a}) \in \delta, (\tup{h, l} \mapsto \mathbf{t}) \in \mathbf{a}_\mathbf{l}: &&C(s, \se_4(l) \concat h) &\mapsto \se(\var{[\se_4(x) \mid x \orderedin \mathbf{t}]})
+    \forall (s \mapsto \mathbf{a}) \in \accounts: &&C(255, s) &\mapsto \mathbf{a}_c \concat \se_8(\mathbf{a}_b, \mathbf{a}_g, \mathbf{a}_m, \mathbf{a}_o, \mathbf{a}_f) \concat \se_4(\mathbf{a}_i, \mathbf{a}_r, \mathbf{a}_a, \mathbf{a}_p) \;, \\
+    \forall (s \mapsto \mathbf{a}) \in \accounts, (\mathbf{k} \mapsto \mathbf{v}) \in \mathbf{a}_\mathbf{s}: &&C(s, \se_4(2^{32}-1) \frown \mathbf{k}) &\mapsto \mathbf{v} \;, \\
+    \forall (s \mapsto \mathbf{a}) \in \accounts, (h \mapsto \mathbf{p}) \in \mathbf{a}_\mathbf{p}: &&C(s, \se_4(2^{32}-2) \frown h) &\mapsto \mathbf{p} \;, \\
+    \forall (s \mapsto \mathbf{a}) \in \accounts, (\tup{h, l} \mapsto \mathbf{t}) \in \mathbf{a}_\mathbf{l}: &&C(s, \se_4(l) \concat h) &\mapsto \se(\var{[\se_4(x) \mid x \orderedin \mathbf{t}]})
   \end{aligned}\right.
 \end{equation}
 
@@ -55,10 +55,10 @@ Finally, be aware that \Jam does not allow service storage keys to be directly i
 
 \subsection{Merklization}
 
-With $T$ defined, we now define the rest of $\mathcal{M}_\sigma$ which primarily involves transforming the serialized mapping into a cryptographic commitment. We define this commitment as the root of the binary Patricia Merkle Trie with a format optimized for modern compute hardware, primarily by optimizing sizes to fit succinctly into typical memory layouts and reducing the need for unpredictable branching.
+With $T$ defined, we now define the rest of $\merklizestate$ which primarily involves transforming the serialized mapping into a cryptographic commitment. We define this commitment as the root of the binary Patricia Merkle Trie with a format optimized for modern compute hardware, primarily by optimizing sizes to fit succinctly into typical memory layouts and reducing the need for unpredictable branching.
 
 \subsubsection{Node Encoding and Trie Identification}
-We identify (sub-)tries as the hash of their root node, with one exception: empty (sub-)tries are identified as the zero-hash, $\H^0$.
+We identify (sub-)tries as the hash of their root node, with one exception: empty (sub-)tries are identified as the zero-hash, $\zerohash$.
 
 Nodes are fixed in size at 512 bit (64 bytes). Each node is either a branch or a leaf. The first bit discriminate between these two types.
 
@@ -73,25 +73,25 @@ In the case of a regular leaf, the remaining 6 bits of the first byte are zeroed
 Formally, we define the encoding functions $B$ and $L$:
 \begin{align}
   B&\colon\left\{\begin{aligned}
-    (\H, \H) &\to \mathbb{B}_{512}\\
+    (\hash, \hash) &\to \mathbb{B}_{512}\\
     (l, r) &\mapsto [0] \frown \text{bits}(l)_{1\dots} \frown \text{bits}(r)
   \end{aligned}\right.\\
   L&\colon\left\{\begin{aligned}
-    (\Y_{31}, \Y) &\to \mathbb{B}_{512}\\
+    (\blob_{31}, \blob) &\to \mathbb{B}_{512}\\
     (k, v) &\mapsto \begin{cases}
       [1, 0] \frown \text{bits}(\se_1(|v|))_{2\dots} \frown \text{bits}(k) \frown \text{bits}(v) \frown [0, 0, \dots] &\when |v| \le 32\\
-      [1, 1, 0, 0, 0, 0, 0, 0] \frown \text{bits}(k) \frown \text{bits}(\hash(v)) &\otherwise
+      [1, 1, 0, 0, 0, 0, 0, 0] \frown \text{bits}(k) \frown \text{bits}(\blake(v)) &\otherwise
     \end{cases}
   \end{aligned}\right.
 \end{align}
 
-We may then define the basic Merklization function $\mathcal{M}_\sigma$ as:
+We may then define the basic Merklization function $\merklizestate$ as:
 \begin{align}
-  \mathcal{M}_\sigma(\sigma) &\equiv M(\{ (\text{bits}(k) \mapsto \tup{k, v}) \mid (k \mapsto v) \in T(\sigma) \})\\
-  M(d: \dict{\mathbb{B}}{(\Y_{31}, \Y)}) &\equiv \begin{cases}
-    \H^0 &\when |d| = 0\\
-    \hash(\text{bits}^{-1}(L(k, v))) &\when \mathcal{V}(d) = \{ (k, v) \}\\
-    \hash(\text{bits}^{-1}(B(M(l), M(r)))) &\otherwise\\
+  \merklizestate(\thestate) &\equiv M(\{ (\text{bits}(k) \mapsto \tup{k, v}) \mid (k \mapsto v) \in T(\thestate) \})\\
+  M(d: \dict{\mathbb{B}}{(\blob_{31}, \blob)}) &\equiv \begin{cases}
+    \zerohash &\when |d| = 0\\
+    \blake(\text{bits}^{-1}(L(k, v))) &\when \mathcal{V}(d) = \{ (k, v) \}\\
+    \blake(\text{bits}^{-1}(B(M(l), M(r)))) &\otherwise\\
     \multicolumn{2}{l}{\quad\where \forall b, p: (b \mapsto p) \in d \Leftrightarrow (b_{1\dots} \mapsto p) \in \begin{cases}
       l &\when b_0 = 0 \\
       r &\when b_0 = 1
@@ -108,33 +108,33 @@ The Merkle tree is a cryptographic data structure yielding a hash commitment to 
 The underlying function for our Merkle trees is the \emph{node} function $N$, which accepts some sequence of blobs of some length $n$ and provides either such a blob back or a hash:
 \begin{equation}
   N\colon\left\{\begin{aligned}
-    (\seq{\Y_n}, \Y \to \H) &\to \Y_n \cup \H \\
+    (\seq{\blob_n}, \blob \to \hash) &\to \blob_n \cup \hash \\
     (\mathbf{v}, H) &\mapsto \begin{cases}
-      \H^0 &\when |\mathbf{v}| = 0 \\
-      \mathbf{v}_0 &\when |\mathbf{v}| = 1 \\
-      H(\token{\$node} \concat N(\mathbf{v}_{\dots\ceil{\nicefrac{|\mathbf{v}|}{2}}}, H) \concat N(\mathbf{v}_{\ceil{\nicefrac{|\mathbf{v}|}{2}}\dots}, H)) &\otherwise
+      \zerohash &\when \len{\mathbf{v}} = 0 \\
+      \mathbf{v}_0 &\when \len{\mathbf{v}} = 1 \\
+      H(\token{\$node} \concat N(\mathbf{v}_{\dots\ceil{\nicefrac{\len{\mathbf{v}}}{2}}}, H) \concat N(\mathbf{v}_{\ceil{\nicefrac{\len{\mathbf{v}}}{2}}\dots}, H)) &\otherwise
     \end{cases}
   \end{aligned}\right.\label{eq:merklenode}
 \end{equation}
 
-The astute reader will realize that if our $\Y_n$ happens to be equivalent $\H$ then this function will always evaluate into $\H$. That said, for it to be secure care must be taken to ensure there is no possibility of preimage collision. For this purpose we include the hash prefix $\token{\$node}$ to minimize the chance of this; simply ensure any items are hashed with a different prefix and the system can be considered secure.
+The astute reader will realize that if our $\blob_n$ happens to be equivalent $\hash$ then this function will always evaluate into $\hash$. That said, for it to be secure care must be taken to ensure there is no possibility of preimage collision. For this purpose we include the hash prefix $\token{\$node}$ to minimize the chance of this; simply ensure any items are hashed with a different prefix and the system can be considered secure.
 
 We also define the \emph{trace} function $T$, which returns each opposite node from top to bottom as the tree is navigated to arrive at some leaf corresponding to the item of a given index into the sequence. It is useful in creating justifications of data inclusion.
 \begin{equation}
   T\colon\left\{\begin{aligned}
-    (\seq{\Y_n}, \N_{|\mathbf{v}|}, \Y \to \H)\ &\to \seq{\Y_n \cup \H}\\
+    (\seq{\blob_n}, \N_{\len{\mathbf{v}}}, \blob \to \hash)\ &\to \seq{\blob_n \cup \hash}\\
     (\mathbf{v}, i, H) &\mapsto \begin{cases}
-      [N(P^\bot(\mathbf{v}, i), H)] \concat T(P^\top(\mathbf{v}, i), i - P_I(\mathbf{v}, i), H) &\when |\mathbf{v}| > 1\\
+      [N(P^\bot(\mathbf{v}, i), H)] \concat T(P^\top(\mathbf{v}, i), i - P_I(\mathbf{v}, i), H) &\when \len{\mathbf{v}} > 1\\
       [] &\otherwise\\
       \multicolumn{2}{l}{
         \begin{aligned}
           \quad \where P^s(\mathbf{v}, i) &\equiv \begin{cases}
-            \mathbf{v}_{\dots\ceil{\nicefrac{|\mathbf{v}|}{2}}} &\when (i < \ceil{\nicefrac{|\mathbf{v}|}{2}}) = s\\
-            \mathbf{v}_{\ceil{\nicefrac{|\mathbf{v}|}{2}}\dots} &\otherwise
+            \mathbf{v}_{\dots\ceil{\nicefrac{\len{\mathbf{v}}}{2}}} &\when (i < \ceil{\nicefrac{\len{\mathbf{v}}}{2}}) = s\\
+            \mathbf{v}_{\ceil{\nicefrac{\len{\mathbf{v}}}{2}}\dots} &\otherwise
           \end{cases}\\[4pt]
           \quad \also P_I(\mathbf{v}, i) &\equiv \begin{cases}
-            0 &\when i < \ceil{\nicefrac{|\mathbf{v}|}{2}} \\
-            \ceil{\nicefrac{|\mathbf{v}|}{2}} &\otherwise
+            0 &\when i < \ceil{\nicefrac{\len{\mathbf{v}}}{2}} \\
+            \ceil{\nicefrac{\len{\mathbf{v}}}{2}} &\otherwise
           \end{cases}\\
         \end{aligned}
       }
@@ -148,9 +148,9 @@ From this we define our other Merklization functions.
 We define the well-balanced binary Merkle function as $\mathcal{M}_B$:
 \begin{equation}
     \mathcal{M}_B\colon \left\{\begin{aligned}\label{eq:simplemerkleroot}
-      (\seq{\Y}, \Y \to \H) &\to \H \\
+      (\seq{\blob}, \blob \to \hash) &\to \hash \\
       (\mathbf{v}, H) &\mapsto \begin{cases}
-        H(\mathbf{v}_0) &\when |\mathbf{v}| = 1 \\
+        H(\mathbf{v}_0) &\when \len{\mathbf{v}} = 1 \\
         N(\mathbf{v}, H) &\otherwise
       \end{cases} \\
     \end{aligned}\right.
@@ -158,41 +158,41 @@ We define the well-balanced binary Merkle function as $\mathcal{M}_B$:
 
 This is suitable for creating proofs on data which is not much greater than 32 octets in length since it avoids hashing each item in the sequence. For sequences with larger data items, it is better to hash them beforehand to ensure proof-size is minimal since each proof will generally contain a data item.
 
-Note: In the case that no hash function argument $H$ is supplied, we may assume the Blake 2b hash function, $\hash$.
+Note: In the case that no hash function argument $H$ is supplied, we may assume the Blake 2b hash function, $\blake$.
 
 \subsubsection{Constant-Depth Tree}
 We define the constant-depth binary Merkle function as $\mathcal{M}$. We define two corresponding functions for working with subtree pages, $\mathcal{J}_x$ and $\mathcal{L}_x$. The latter provides a single page of leaves, themselves hashed, prefixed data. The former provides the Merkle path to a single page. Both assume size-aligned pages of size $2^x$ and accept page indices.
 \begin{align}
   \label{eq:constantdepthmerkleroot}
   \mathcal{M}&\colon \left\{\begin{aligned}
-    (\seq{\Y}, \Y \to \H) &\to \H\\
+    (\seq{\blob}, \blob \to \hash) &\to \hash\\
     (\mathbf{v}, H) &\mapsto N(C(\mathbf{v}, H), H)
   \end{aligned}\right.\\
   \label{eq:constantdepthsubtreemerklejust}
   \mathcal{J}_x&\colon \left\{\begin{aligned}
-    (\seq{\Y}, \N_{|\mathbf{v}|}, \Y \to \H) &\to \seq{\H}\\
-    (\mathbf{v}, i, H) &\mapsto T(C(\mathbf{v}, H), 2^xi, H)_{\dots\max(0, \ceil{\log_2(\max(1, |\mathbf{v}|)) - x})}
+    (\seq{\blob}, \N_{\len{\mathbf{v}}}, \blob \to \hash) &\to \seq{\hash}\\
+    (\mathbf{v}, i, H) &\mapsto T(C(\mathbf{v}, H), 2^xi, H)_{\dots\max(0, \ceil{\log_2(\max(1, \len{\mathbf{v}})) - x})}
   \end{aligned}\right.\\
   \label{eq:constantdepthsubtreemerkleleafpage}
   \mathcal{L}_x&\colon \left\{\begin{aligned}
-    (\seq{\Y}, \N_{|\mathbf{v}|}, \Y \to \H) &\to \seq{\H}\\
-    (\mathbf{v}, i, H) &\mapsto [H(\token{\$leaf} \concat l) \mid l \orderedin \mathbf{v}_{2^xi \dots \min(2^xi+2^x, |\mathbf{v}|)}]
+    (\seq{\blob}, \N_{\len{\mathbf{v}}}, \blob \to \hash) &\to \seq{\hash}\\
+    (\mathbf{v}, i, H) &\mapsto [H(\token{\$leaf} \concat l) \mid l \orderedin \mathbf{v}_{2^xi \dots \min(2^xi+2^x, \len{\mathbf{v}})}]
   \end{aligned}\right.
 \end{align}
 
 For the latter justification $\mathcal{J}_x$ to be acceptable, we must assume the target observer also knows not merely the value of the item at the given index, but also all other leaves within its $2^x$ size subtree, given by $\mathcal{L}_x$.
 
-As above, we may assume a default value for $H$ of the Blake 2b hash function, $\hash$.
+As above, we may assume a default value for $H$ of the Blake 2b hash function, $\blake$.
 
-For justifications and Merkle root calculations, a constancy preprocessor function $C$ is applied which hashes all data items with a fixed prefix ``leaf'' and then pads the overall size to the next power of two with the zero hash $\mathbb{H}_0$:
+For justifications and Merkle root calculations, a constancy preprocessor function $C$ is applied which hashes all data items with a fixed prefix ``leaf'' and then pads the overall size to the next power of two with the zero hash $\zerohash$:
 \begin{equation}
   C\colon\left\{\begin{aligned}
-    (\seq{\Y}, \Y \to \H) &\to \seq{\H}\\
+    (\seq{\blob}, \blob \to \hash) &\to \seq{\hash}\\
     (\mathbf{v}, H) &\mapsto \mathbf{v}' \ \where \left\{\; \begin{aligned}
-      |\mathbf{v}'| &= 2^{\ceil{\log_2(\max(1, |\mathbf{v}|))}}\\
+      \len{\mathbf{v}}| &= 2^{\ceil{\log_2(\max(1, \len{\mathbf{v}}))}}\\
       \mathbf{v}'_i &= \begin{cases}
-        H(\token{\$leaf} \concat \mathbf{v}_i) &\when i < |\mathbf{v}|\\
-        \mathbb{H}_0 &\otherwise \\
+        H(\token{\$leaf} \concat \mathbf{v}_i) &\when i < \len{\mathbf{v}}\\
+        \zerohash &\otherwise \\
       \end{cases}
     \end{aligned}\right.
   \end{aligned}\right.
@@ -202,7 +202,7 @@ For justifications and Merkle root calculations, a constancy preprocessor functi
 
 The Merkle Mountain Range (\textsc{mmr}) is an append-only cryptographic data structure which yields a commitment to a sequence of values. Appending to an \textsc{mmr} and proof of inclusion of some item within it are both $O(\log(N))$ in time and space for the size of the set.
 
-We define a Merkle Mountain Range as being within the set $\seq{\H?}$, a sequence of peaks, each peak the root of a Merkle tree containing $2^i$ items where $i$ is the index in the sequence. Since we support set sizes which are not always powers-of-two-minus-one, some peaks may be empty, $\none$ rather than a Merkle root.
+We define a Merkle Mountain Range as being within the set $\seq{\optional{\hash}}$, a sequence of peaks, each peak the root of a Merkle tree containing $2^i$ items where $i$ is the index in the sequence. Since we support set sizes which are not always powers-of-two-minus-one, some peaks may be empty, $\none$ rather than a Merkle root.
 
 Since the sequence of hashes is somewhat unwieldy as a commitment, Merkle Mountain Ranges are themselves generally hashed before being published. Hashing them removes the possibility of further appending so the range itself is kept on the system which needs to generate future proofs.
 
@@ -213,14 +213,14 @@ We define the append function $\mathcal{A}$ as:
   \begin{aligned}
     \label{eq:mmrappend}
     \mathcal{A}&\colon\deffunc{
-      (\seq{\H?}, \H, \Y\to\H) &\to \seq{\H?}\\
+      (\seq{\optional{\hash}}, \hash, \blob\to\hash) &\to \seq{\optional{\hash}}\\
       (\mathbf{r}, l, H) &\mapsto P(\mathbf{r}, l, 0, H)
     }\\
     \where P&\colon\deffunc{
-      (\seq{\H?}, \H, \N, \Y\to\H) &\to \seq{\H?}\\
+      (\seq{\optional{\hash}}, \hash, \N, \blob\to\hash) &\to \seq{\optional{\hash}}\\
       (\mathbf{r}, l, n, H) &\mapsto \begin{cases}
-        \mathbf{r} \doubleplus l &\when n \ge |\mathbf{r}|\\
-        R(\mathbf{r}, n, l) &\when n < |\mathbf{r}| \wedge \mathbf{r}_n = \none\\
+        \mathbf{r} \doubleplus l &\when n \ge \len{\mathbf{r}}\\
+        R(\mathbf{r}, n, l) &\when n < \len{\mathbf{r}} \wedge \mathbf{r}_n = \none\\
         P(R(\mathbf{r}, n, \none), H(\mathbf{r}_n \concat l), n + 1, H) &\otherwise
       \end{cases}
     }\\
@@ -234,7 +234,7 @@ We define the append function $\mathcal{A}$ as:
 We define the \textsc{mmr} encoding function as $\se_M$:
 \begin{equation}
   \se_M\colon\deffunc{
-    \seq{\H?} &\to \Y \\
+    \seq{\optional{\hash}} &\to \blob \\
     \mathbf{b} &\mapsto \se(\var{[\maybe{x}\mid x \orderedin \mathbf{b}]})
   }
 \end{equation}
@@ -242,18 +242,18 @@ We define the \textsc{mmr} encoding function as $\se_M$:
 We define the \textsc{mmr} super-peak function as $\mathcal{M}_R$:
 \begin{equation}
   \mathcal{M}_R\colon\deffunc{
-    \seq{\H?} &\to \H \\
+    \seq{\optional{\hash}} &\to \hash \\
     \mathbf{b} &\mapsto \begin{cases}
-      \H^0 &\when |\mathbf{h}| = 0\\
-      \mathbf{h}_0 &\when |\mathbf{h}| = 1\\
-      \hash_K(\token{\$peak} \concat \mathcal{M}_R(\mathbf{h}_{\dots|\mathbf{h}|-1}) \concat \mathbf{h}_{|\mathbf{h}|-1}) &\otherwise \\
+      \zerohash &\when \len{\mathbf{h}} = 0\\
+      \mathbf{h}_0 &\when \len{\mathbf{h}} = 1\\
+      \keccak(\token{\$peak} \concat \mathcal{M}_R(\mathbf{h}_{\dots\len{\mathbf{h}}-1}) \concat \mathbf{h}_{\len{\mathbf{h}}-1}) &\otherwise \\
       \multicolumn{2}{l}{\where \mathbf{h} = \sq{h \mid h \orderedin \mathbf{b}, h \ne \none}}
     \end{cases}
   }
 \end{equation}
 
 %\begin{equation}
-%  \left\{\mathbb{H}\right.
+%  \left\{\zerohash\right.
 %\end{equation}
 %\begin{equation}
 %  \left\{\,\begin{aligned} & (\mathbb{H}) \\ & \begin{cases}x&y\end{cases} \end{aligned}\right.
