--- a/text/recent_history.tex
+++ b/text/recent_history.tex
@@ -4,27 +4,27 @@ We retain in state information on the most recent $\mathsf{H}$ blocks. This is u
 \begin{align}
   \beta &\in (\recenthistory, \beefybelt) \label{eq:recenthistory} \\
   \recenthistory &\in \seq{\tuple{
-    \isa{h}{\H},
-    \isa{b}{\H},
-    \isa{s}{\H},
-    \isa{\mathbf{p}}{\dict{\H}{\H}}
+    \isa{h}{\hash},
+    \isa{b}{\hash},
+    \isa{s}{\hash},
+    \isa{\mathbf{p}}{\dict{\hash}{\hash}}
   }}_{:\mathsf{H}}\\
-  \beefybelt &\in \seq{\H?} \\
-  \lastaccout &\in \seq{\tup{\N_S, \H}}
+  \beefybelt &\in \seq{\optional{\hash}} \\
+  \lastaccout &\in \seq{\tup{\N_S, \hash}}
 \end{align}
 
-For each recent block, we retain its header hash, its state root, its accumulation-result \textsc{mmb} and the corresponding work-package hashes of each item reported (which is no more than the total number of cores, $\mathsf{C} = 341$).
+For each recent block, we retain its header hash, its state root, its accumulation-result \textsc{mmb} and the corresponding work-package hashes of each item reported (which is no more than the total number of cores, $\corecount = 341$).
 
 During the accumulation stage, a value with the partial transition of this state is provided which contains the correction for the newly-known state-root of the parent block:
 \begin{equation}\label{eq:correctlaststateroot}
-  \recenthistory^\dagger \equiv \recenthistory\quad\exc\quad\recenthistory^\dagger[|\recenthistory| - 1]_s = \mathbf{H}_r
+  \recenthistory^\dagger \equiv \recenthistory\quad\exc\quad\recenthistory^\dagger[\len{\recenthistory} - 1]_s = \H_\¬priorstateroot
 \end{equation}
 
 We define the new Accumulation Output Log $\beefybelt$. This is formed from the block's accumulation-output sequence $\lastaccout'$ (defined in section \ref{sec:accumulation}), taking its root using the basic binary Merklization function ($\mathcal{M}_B$, defined in appendix \ref{sec:merklization}) and appending it to the previous log value with the \textsc{mmb} append function ($\mathcal{A}$, defined in appendix \ref{sec:mmr}). Throughout, the Keccak hash function is used to maximize compatibility with legacy systems:
 \begin{align}
   \using \mathbf{s} &= \sq{\se_4(s) \frown \se(h) \mid \tup{s, h} \orderedin \lastaccout'}\\
   \label{eq:buildbeefymap}
-  \beefybelt' &\equiv \mathcal{A}(\beefybelt, \mathcal{M}_B(\mathbf{s}, \hash_K), \hash_K)
+  \beefybelt' &\equiv \mathcal{A}(\beefybelt, \mathcal{M}_B(\mathbf{s}, \keccak), \keccak)
 \end{align}
 
 The final state transition for $\recenthistory$ appends a new item including the new block's header hash, a Merkle commitment to the block's Accumulation Output Log and the set of work-reports made into it (for which we use the guarantees extrinsic, $\xtguarantees$). Formally:
@@ -32,12 +32,12 @@ The final state transition for $\recenthistory$ appends a new item including the
   \begin{aligned}
     \recenthistory' &\equiv {\overleftarrow{\recenthistory^\dagger \doubleplus \tup{
       \mathbf{p},
-      \is{h}{\hash(\mathbf{H})},
+      \is{h}{\blake(\theheader)},
       \is{b}{\mathcal{M}_R(\beefybelt')},
-      \is{s}{\H^0}
+      \is{s}{\zerohash}
       }}}^\mathsf{H} \\
-    \where \mathbf{p} &= \{ ((g_w)_s)_h \mapsto ((g_w)_s)_e \mid g \in \xtguarantees \}
+    \where \mathbf{p} &= \{ ((g_\xg¬workreport)_\wr¬avspec)_\as¬packagehash \mapsto ((g_\xg¬workreport)_\wr¬avspec)_\as¬segroot \mid g \in \xtguarantees \}
   \end{aligned}
 \end{equation}
 
-The new state-trie root is the zero hash, $\H^0$, which is inaccurate but safe since $\recenthistory'$ is not utilized except to define the next block's $\recenthistory^\dagger$, which contains a corrected value for this, as per equation \ref{eq:correctlaststateroot}.
+The new state-trie root is the zero hash, $\zerohash$, which is inaccurate but safe since $\recenthistory'$ is not utilized except to define the next block's $\recenthistory^\dagger$, which contains a corrected value for this, as per equation \ref{eq:correctlaststateroot}.
