--- a/text/statistics.tex
+++ b/text/statistics.tex
@@ -16,8 +16,8 @@ The validator statistics are made on a per-epoch basis and we retain one record 
     \isa{d}{\N}\,,
     \isa{g}{\N}\,,
     \isa{a}{\N}
-%    \isa{\mathbf{u}}{\seq{\N}_\mathsf{V}}
-  }}_\mathsf{V}^2\!\!\!\!\!\!\!\!\!\!
+%    \isa{\mathbf{u}}{\seq{\N}_\valcount}
+  }}_\valcount^2\!\!\!\!\!\!\!\!\!\!
 \end{align}
 
 The six validator statistics we track are:
@@ -35,26 +35,26 @@ The six validator statistics we track are:
 
 The objective statistics are updated in line with their description, formally:
 \begin{align}
-    \using e =\; &\ffrac{\tau}{\mathsf{E}} \ ,\quad e' = \ffrac{\tau'}{\mathsf{E}}\\
+    \using e =\; &\ffrac{\thetime}{\mathsf{E}} \ ,\quad e' = \ffrac{\thetime'}{\mathsf{E}}\\
     \!(\mathbf{a}, \pi'_L) \equiv\;&\begin{cases}
         (\pi_V, \pi_L) &\when e' = e \\
         (\sq{\tuple{0, \dots, [0, \dots]}, \dots}, \pi_V)\!\!\!\! &\otherwise
     \end{cases}\!\!\!\!\\
-    \forall v \in \N_\mathsf{V} :&\; \left\{\begin{aligned}
-        \pi'_V[v]_b &\equiv \mathbf{a}[v]_b + (v = \mathbf{H}_i)\\
+    \forall v \in \valindex :&\; \left\{\begin{aligned}
+        \pi'_V[v]_b &\equiv \mathbf{a}[v]_b + (v = \H_\¬authorindex)\\
         \pi'_V[v]_t &\equiv \mathbf{a}[v]_t + \begin{cases}
-            |\xttickets| &\when v = \mathbf{H}_i \\
+            \len{\xttickets} &\when v = \H_\¬authorindex \\
             0 &\otherwise
         \end{cases}\\
         \pi'_V[v]_p &\equiv \mathbf{a}[v]_p + \begin{cases}
-            |\xtpreimages| &\when v = \mathbf{H}_i \\
+            \len{\xtpreimages} &\when v = \H_\¬authorindex \\
             0 &\otherwise
         \end{cases}\\
         \pi'_V[v]_d &\equiv \mathbf{a}[v]_d + \begin{cases}
-            \sum_{d \in \xtpreimages}|d| &\when v = \mathbf{H}_i \\
+            \sum_{d \in \xtpreimages}|d| &\when v = \H_\¬authorindex \\
             0 &\otherwise
         \end{cases}\\
-        \pi'_V[v]_g &\equiv \mathbf{a}[v]_g + (\kappa'_v \in \mathbf{R})\\
+        \pi'_V[v]_g &\equiv \mathbf{a}[v]_g + (\activeset'_v \in \mathbf{R})\\
         \pi'_V[v]_a &\equiv \mathbf{a}[v]_a + (\exists a \in \xtassurances : a_v = v)
     \end{aligned}\right.\!\!\!\!\!
 \end{align}
@@ -74,26 +74,26 @@ The other two components of statistics are the core and service activity statist
       \isa{z&}{\N}\,,\;  % extrinsic_size: u32
       \isa{&x&}{\N}\,,\;  % exports: u16
       \isa{&b&}{\N}\,,\;  % bundle_size: u32
-      \isa{&u&}{\N_G}% gas used
+      \isa{&u&}{\gas}% gas used
     \end{alignedat}
-  }}_\mathsf{C}\\
+  }}_\corecount\\
   \pi_S &\in \dict{\N_S}{\tuple{
     \begin{alignedat}{3}
       \isa{p&}{(\N, \N)}\,,\;  % provided_count: u16; provided_size: u32
-      \isa{&r&}{(\N, \N_G)}\,,\;\\% refinement_count: u32; refinement_gas_used: UnsignedGas
+      \isa{&r&}{(\N, \gas)}\,,\;\\% refinement_count: u32; refinement_gas_used: UnsignedGas
       \isa{i&}{\N}\,,\;  % imports: u16
       \isa{e}{\N}\,,\;  % extrinsic_count: u16
       \isa{&z&}{\N}\,,\;  % extrinsic_size: u32
       \isa{x}{\N}\,,\;\\  % exports: u16
-      \isa{a&}{(\N, \N_G)}\,,\;% accumulate_count: u32; accumulate_gas_used: UnsignedGas
-      \isa{&t&}{(\N, \N_G)}% on_transfers_count: u32; on_transfers_gas_used: UnsignedGas
+      \isa{a&}{(\N, \gas)}\,,\;% accumulate_count: u32; accumulate_gas_used: UnsignedGas
+      \isa{&t&}{(\N, \gas)}% on_transfers_count: u32; on_transfers_gas_used: UnsignedGas
     \end{alignedat}
   }}
 \end{align}
 
 The core statistics are updated using several intermediate values from across the overall state-transition function; $\mathbf{w}$, the incoming work-reports, as defined in \ref{eq:incomingworkreports} and $\mathbf{W}$, the newly available work-reports, as defined in \ref{eq:availableworkreports}. We define the statistics as follows:
 \begin{align}
-  \forall c \in \N_\mathsf{C} : \pi'_C[c] &\equiv \tup{
+  \forall c \in \coreindex : \pi'_C[c] &\equiv \tup{
     \begin{alignedat}{5}
       \is{i&}{R(c)_i}\,,\;
       \is{&x&}{R(c)_x}\,,\;
@@ -105,9 +105,9 @@ The core statistics are updated using several intermediate values from across th
       \is{&p&}{\span\span \textstyle \sum_{a \in \mathbf{E}_A} a_f[c]\qquad}
     \end{alignedat}
   }\!\!\!\!\\
-  \where R(c \in \N_\mathsf{C}) &\equiv \!\!\!\!\!\!\!\!\!\!\!\sum_{r \in w_\mathbf{r}, w \in \mathbf{w}, w_c = c}
+  \where R(c \in \coreindex) &\equiv \!\!\!\!\!\!\!\!\!\!\!\sum_{r \in w_\mathbf{r}, w \in \mathbf{w}, w_c = c}
   \!\!\!\!\!\!\!\!\!\!\!(r_i, r_x, r_z, r_e, r_u, \is{b}{(w_s)_l})\\
-  \also D(c \in \N_\mathsf{C}) &\equiv \!\!\!\!\!\!\sum_{w \in \mathbf{W}, w_c = c}
+  \also D(c \in \coreindex) &\equiv \!\!\!\!\!\!\sum_{w \in \mathbf{W}, w_c = c}
   \!\!\!\!\!\!(w_s)_l + \mathsf{W}_G\ceil{(w_s)_n\nicefrac{65}{64}}
 \end{align}
 
@@ -120,7 +120,7 @@ Finally, the service statistics are updated using the same intermediate values a
       \is{&z&}{R(s)_z}\,,\\
       \is{e&}{R(s)_e}\,,\;
       \is{&r&}{\span\span\tup{R(s)_n, R(s)_u}}\,,\;\\
-      \is{p&}{\span\span \textstyle \sum_{\tup{s, \mathbf{p}} \in \mathbf{E}_P} \tup{1, |\mathbf{p}|}}\,,\;\\
+      \is{p&}{\span\span \textstyle \sum_{\tup{s, \mathbf{p}} \in \mathbf{E}_P} \tup{1, \len{\mathbf{p}}}}\,,\;\\
       \is{a&}{\span\span \subifnone(\mathbf{I}[s], \tup{0, 0})}\,,\; \ \ \\
       \is{t&}{\span\span \subifnone(\mathbf{X}[s], \tup{0, 0})} \quad\\
     \end{alignedat}
